--- a/birtExtensionTest/.classpath
+++ b/birtExtensionTest/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry excluding="**/*.ivyClass|**/*.mod|**/*.eventmappings|**/*.rddescriptor|**/*.xhtml" kind="src" path="src_hd"/>
 	<classpathentry kind="src" path="src_ws"/>
 	<classpathentry kind="src" path="src_dataClasses"/>
+	<classpathentry kind="src" path="src_test"/>
 	<classpathentry exported="true" kind="con" path="IVY_CONTAINER"/>
 	<classpathentry kind="con" path="ULC_CONTAINER"/>
 	<classpathentry kind="src" path="src_wsproc"/>
@@ -13,6 +14,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="classes"/>
