--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -36,7 +36,7 @@
   	<dependency>
 		<groupId>org.eclipse.birt.runtime</groupId>
 		<artifactId>org.eclipse.birt.runtime</artifactId>
-		<version>4.4.2</version>
+		<version>3.7.2.v20120214-1408</version>
 		<scope>runtime</scope>
 		<exclusions>
 			<!-- avoid runtime methodNotFoundException because of conflict with existing commons -->
