--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	</properties>
 
 	<modules>
-		<module>birtExtension/build/withDesignerPlatform</module>
+		<module>birtExtension</module>
 		<module>birtExtensionTest</module>
 	</modules>
 	
