--- a/birtExtension/pom.xml
+++ b/birtExtension/pom.xml
@@ -6,21 +6,14 @@
 	<groupId>com.axonivy.ivy.supplements</groupId>
 	<artifactId>ch.ivyteam.ivy.extension.birt</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<version>6.6.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>com.axonivy.ivy.supplements</groupId>
-		<artifactId>birt-extension-modules</artifactId>
-		<version>6.1.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<artifactId>ivy-bundle</artifactId>
+		<version>6.4.1-SNAPSHOT</version>
+		<relativePath>../../bpm-beans/build.maven/ivy.bundle</relativePath>
 	</parent>
-
-	<repositories>
-		<repository>
-			<id>ivy.nightly</id>
-			<url>http://developer.axonivy.com/dev-releases/ivy/nightly/current/p2/</url>
-			<layout>p2</layout>
-		</repository>
-	</repositories>
 
 	<build>
 		<plugins>
