--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -25,7 +25,7 @@
   		<groupId>com.axonivy.ivy.supplements</groupId>
   		<artifactId>ch.ivyteam.ivy.extension.birt</artifactId>
   		<version>${project.version}</version>
-  		<scope>runtime</scope>
+  		<scope>compile</scope>
   		<exclusions>
   			<exclusion>
   				<groupId>*</groupId>
@@ -33,46 +33,6 @@
   			</exclusion>
   		</exclusions>
   	</dependency>
-  	
-  	<dependency>
-		<groupId>org.eclipse.birt.runtime</groupId>
-		<artifactId>org.eclipse.birt.runtime</artifactId>
-		<version>3.7.2.v20120214-1408</version>
-		<scope>runtime</scope>
-		<exclusions>
-			<!-- avoid runtime methodNotFoundException because of conflict with existing commons -->
-			<exclusion>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-			</exclusion>
-			<exclusion>
-				<groupId>commons-cli</groupId>
-				<artifactId>commons-cli</artifactId>
-			</exclusion>
-			<exclusion>
-				<artifactId>commons-codec</artifactId>
-				<groupId>commons-codec</groupId>
-			</exclusion>
-			<exclusion>
-				<artifactId>xml-apis</artifactId>
-				<groupId>xml-apis</groupId>
-			</exclusion>
-			<exclusion>
-				<artifactId>xmlbeans</artifactId>
-				<groupId>org.apache.xmlbeans</groupId>
-			</exclusion>
-			<exclusion>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-			</exclusion>
-			<exclusion>
-				<!-- avoid package signer conflict with commons-io -->
-				<groupId>org.eclipse.birt.runtime.3_7_1</groupId>
-				<artifactId>org.apache.batik.pdf</artifactId>
-			</exclusion>
-		</exclusions>
-	</dependency>
-	
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
@@ -109,10 +69,49 @@
   	<testOutputDirectory>classes</testOutputDirectory>
   
     <plugins>
+    
+    	<plugin>
+			<artifactId>maven-antrun-plugin</artifactId>
+			<version>1.8</version>
+			<executions>
+				<execution>
+					<id>provide.mandatory.birt.properties</id>
+					<phase>process-resources</phase>
+					<goals><goal>run</goal></goals>
+					<configuration>
+						<target>
+							<property name="engineHome" value="${engine.dir}/lib/birtRuntime/birt-runtime-osgi-4_2_2/ReportEngine" />
+							<property name="designRepository" value="${basedir}/reports" />
+							<echoproperties
+								destfile="${engine.dir}/configuration/extensions/birt.properties">
+								<propertyset>
+									<propertyref name="engineHome" />
+									<propertyref name="designRepository" />
+								</propertyset>
+							</echoproperties>
+						</target>
+					</configuration>
+				</execution>
+				<execution>
+					<id>get.birt.runtime</id>
+					<phase>pre-integration-test</phase>
+					<goals><goal>run</goal></goals>
+					<configuration>
+						<target>
+							<property name="birt.rt.zip" value="${project.build.directory}/birt-runtime-osgi-4_2_2.zip"/>
+						  	<available file="${birt.rt.zip}" property="birt.rt.zip.present"/>
+						  	<get src="http://www.eclipse.org/downloads/download.php?file=/birt/downloads/drops/R-R1-4_2_2-201302161152/birt-runtime-osgi-4_2_2.zip" 
+						  		dest="${birt.rt.zip}"/>
+						  	<unzip src="${birt.rt.zip}" dest="${engine.dir}/lib/birtRuntime" />
+						</target>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>6.5.0</version>
+        <version>6.5.1-SNAPSHOT</version>
         <extensions>true</extensions>
         <executions>
         	<execution>
@@ -153,42 +152,17 @@
       	<version>2.10</version>
       	<executions>
       		<execution>
-      			<id>integrate.birt.into.ivy.engine</id>
+      			<id>integrate.birt.extension.into.ivy.engine</id>
       			<phase>generate-resources</phase>
       			<goals><goal>copy-dependencies</goal></goals>
       			<configuration>
-      				<outputDirectory>${engine.dir}/lib/shared</outputDirectory>
-      				<includeScope>runtime</includeScope>
+      				<outputDirectory>${engine.dir}/lib/dropins</outputDirectory>
+      				<includeArtifactIds>ch.ivyteam.ivy.extension.birt</includeArtifactIds>
       			</configuration>
       		</execution>
       	</executions>
       </plugin>
 
-		<plugin>
-			<artifactId>maven-antrun-plugin</artifactId>
-			<version>1.8</version>
-			<executions>
-				<execution>
-					<id>provide.mandatory.birt.properties</id>
-					<phase>process-resources</phase>
-					<goals><goal>run</goal></goals>
-					<configuration>
-						<target>
-							<property name="engineHome" value="${project.build.directory}" />
-							<property name="designRepository" value="${basedir}/reports" />
-							<echoproperties
-								destfile="${engine.dir}/configuration/extensions/birt.properties">
-								<propertyset>
-									<propertyref name="engineHome" />
-									<propertyref name="designRepository" />
-								</propertyset>
-							</echoproperties>
-						</target>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
-		
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
