--- a/birtExtension/pom.xml
+++ b/birtExtension/pom.xml
@@ -3,17 +3,28 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.axonivy.ivy.supplements</groupId>
 	<artifactId>ch.ivyteam.ivy.extension.birt</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<version>6.6.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>com.axonivy.ivy.supplements</groupId>
-		<artifactId>ivy-bundle</artifactId>
-		<version>6.4.1-SNAPSHOT</version>
-		<relativePath>../../bpm-beans/build.maven/ivy.bundle</relativePath>
+		<artifactId>birt-extension-modules</artifactId>
+		<version>6.6.0-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
+
+	<properties>
+		<tycho.version>0.24.0</tycho.version>
+		<java.version>1.8</java.version>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>ivy.nightly.release</id>
+			<layout>p2</layout>
+			<url>http://developer.axonivy.com/dev-releases/ivy/nightly/current/p2</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -24,6 +35,24 @@
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>target-platform-configuration</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
