--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -8,16 +8,10 @@
 	<version>6.6.0-SNAPSHOT</version>
 	<packaging>iar</packaging>
 
-	<parent>
-		<groupId>com.axonivy.ivy.supplements</groupId>
-		<artifactId>birt-extension-modules</artifactId>
-		<version>6.6.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
-	</parent>
-
 	<properties>
 		<engine.dir>${project.build.directory}/ivyEngine</engine.dir>
 		<test.application>Portal</test.application>
+        	<ivy.version>6.6.2</ivy.version>
 	</properties>
 
 	<dependencies>
