--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -115,7 +115,7 @@
 			<plugin>
 				<groupId>com.axonivy.ivy.ci</groupId>
 				<artifactId>project-build-plugin</artifactId>
-				<version>6.5.1-SNAPSHOT</version>
+				<version>6.7.1</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
@@ -171,7 +171,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${engine.dir}/lib/dropins</outputDirectory>
+							<outputDirectory>${engine.dir}/dropins</outputDirectory>
 							<includeArtifactIds>ch.ivyteam.ivy.extension.birt</includeArtifactIds>
 						</configuration>
 					</execution>
