--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axonivy.ivy.supplements</groupId>
 	<artifactId>birt-extension-test</artifactId>
-	<version>6.7.0-SNAPSHOT</version>
+	<version>7.0.0-SNAPSHOT</version>
 	<packaging>iar</packaging>
 
 	<properties>
@@ -117,7 +117,7 @@
 			<plugin>
 				<groupId>com.axonivy.ivy.ci</groupId>
 				<artifactId>project-build-plugin</artifactId>
-				<version>6.7.2-SNAPSHOT</version>
+				<version>7.0.1</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
