--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -5,13 +5,24 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axonivy.ivy.supplements</groupId>
 	<artifactId>birt-extension-test</artifactId>
-	<version>7.0.0-SNAPSHOT</version>
+	<version>7.1.0-SNAPSHOT</version>
 	<packaging>iar</packaging>
 
 	<properties>
 		<engine.dir>${project.build.directory}/ivyEngine</engine.dir>
 		<test.application>Portal</test.application>
 	</properties>
+
+    <pluginRepositories>
+		<!-- Snapshot releases are not deployed to maven central. So the repo on sonatype could be used instead -->
+		<pluginRepository>
+			<id>sonatype</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</pluginRepository>
+    </pluginRepositories>
 
 	<dependencies>
 		<dependency>
@@ -117,7 +128,7 @@
 			<plugin>
 				<groupId>com.axonivy.ivy.ci</groupId>
 				<artifactId>project-build-plugin</artifactId>
-				<version>7.0.1</version>
+				<version>7.1.0-SNAPSHOT</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
