Added both P2 Repos

--- a/birtExtension/pom.xml
+++ b/birtExtension/pom.xml
@@ -17,6 +17,11 @@
 		<repository>
 			<id>ivy.nightly.release</id>
 			<layout>p2</layout>
+			<url>https://developer.axonivy.com/releases/ivy/nightly/p2/</url>
+		</repository>
+		<repository>
+			<id>ivy.works.p2</id>
+			<layout>p2</layout>
 			<url>https://download.axonivy.works/p2/</url>
 		</repository>
 	</repositories>
