--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<engine.dir>${project.build.directory}/ivyEngine</engine.dir>
 		<test.application>Portal</test.application>
+		<project-build-plugin.version>7.1.0</project-build-plugin.version>
 	</properties>
 
     <pluginRepositories>
@@ -128,7 +129,7 @@
 			<plugin>
 				<groupId>com.axonivy.ivy.ci</groupId>
 				<artifactId>project-build-plugin</artifactId>
-				<version>7.1.0</version>
+				<version>${project-build-plugin.version}</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
