copied IBirtRuntimeManger into ext
- as it is no longer part of the ivy core.
- basically its a copy of what is in the designer.birt feature

--- a/birtExtension/plugin.xml
+++ b/birtExtension/plugin.xml
@@ -6,6 +6,9 @@
       <ivyServerExtension
             class="ch.ivyteam.ivy.extension.birt.BirtEngine">
       </ivyServerExtension>
+      <ivyServerExtension
+            class="ch.ivyteam.ivy.reporting.internal.BirtRuntimeManagerExtensionOsgi">
+      </ivyServerExtension>
    </extension>
    <extension
          point="ch.ivyteam.ivy.java.IIvyProjectClassPathExtension">
