--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -194,7 +194,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.22.1</version>
 				<executions>
 					<execution>
 						<id>selenium.web.tests</id>
@@ -211,6 +211,7 @@
 								-Dtest.engine.app=${test.application}
 								-Dtest.engine.log=${project.build.directory}/testEngineOut.log
 							</argLine>
+							<testFailureIgnore>true</testFailureIgnore>
 						</configuration>
 					</execution>
 				</executions>
