--- a/birtExtension/build.properties
+++ b/birtExtension/build.properties
@@ -3,4 +3,4 @@ output.. = classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/,\
+               lib/
