--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<engine.dir>${project.build.directory}/ivyEngine</engine.dir>
 		<test.application>Portal</test.application>
-		<project-build-plugin.version>7.4.0</project-build-plugin.version>
+		<project-build-plugin.version>7.4.0-SNAPSHOT</project-build-plugin.version>
 	</properties>
 
     <pluginRepositories>
