--- a/birtExtensionTest/pom.xml
+++ b/birtExtensionTest/pom.xml
@@ -5,13 +5,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axonivy.ivy.supplements</groupId>
 	<artifactId>birt-extension-test</artifactId>
-	<version>7.4.0-SNAPSHOT</version>
+	<version>7.4.1-SNAPSHOT</version>
 	<packaging>iar</packaging>
 
 	<properties>
 		<engine.dir>${project.build.directory}/ivyEngine</engine.dir>
 		<test.application>Portal</test.application>
-		<project-build-plugin.version>7.4.0-SNAPSHOT</project-build-plugin.version>
+		<project-build-plugin.version>7.4.0</project-build-plugin.version>
 	</properties>
 
     <pluginRepositories>
